11-03-2025 HTML Forms Site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ramanthakur</title>
+    <style>
+      table, td{
+        margin-left: auto; 
+        margin-right: auto; 
+        border: 1px solid gray;
+        text-align: center;
+      }
+    </style>
   </head>
   <body style="font-family: sans-serif">
     <h1 style="text-align: center">Raman Thakur's<br />🛒 Web-App Store</h1>
@@ -11,12 +19,56 @@
     </h2>
     <hr style="height: 2px" />
 
-    <ul>
-        <img src="/roadmap.png" alt="" style="width: 100%; max-width: 200px;">
-      <li>
-        
-        <a href="https://effulgent-fenglisu-30b025.netlify.app/">Frontend Roadmap</a>
-      </li>
-    </ul>
+
+
+    <table>
+      <tr>
+        <td>
+          <img src="/roadmap.png" alt="" style="width: 100%; max-width: 200px;">          
+        </td>
+        <td>
+          <img src="/form.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+        </td>
+        <td>
+          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+        </td>
+        <td>
+          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+        </td>
+        <td>
+          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+        </td>
+        <td>
+          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+        </td>
+        <td>
+          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://effulgent-fenglisu-30b025.netlify.app/">01 Frontend Roadmap</a>
+        </td>
+        <td>
+          <a href="https://www.ramanthakur.tech/07_form/">02 HTML Forms</a>
+        </td>
+        <td>
+          <a href="/">Upcomming Project</a>
+        </td>
+        <td>
+          <a href="/">Upcomming Project</a>
+        </td>
+        <td>
+          <a href="/">Upcomming Project</a>
+        </td>
+        <td>
+          <a href="/">Upcomming Project</a>
+        </td>
+        <td>
+          <a href="/">Upcomming Project</a>
+        </td>
+      </tr>
+    </table>
+
   </body>
 </html>
