--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
     <table>
       <tr>
         <td>
-          <img src="/roadmap.png" alt="" style="width: 100%; max-width: 200px;">          
+          <img src="images/roadmap.jpg" alt="roadmap image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/form.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/form.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/white.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
       </tr>
       <tr>
