third site added

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <table>
       <tr>
         <td>
-          <img src="images/roadmap.jpg" alt="roadmap image" style="width: 100%; max-width: 200px;">          
+          <img src="images/roadmap.png" alt="roadmap image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
           <img src="/images/form.jpg" alt="form image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/image-qr-code.png" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
           <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
@@ -53,7 +53,7 @@
           <a href="https://www.ramanthakur.tech/07_form/">02 HTML Forms</a>
         </td>
         <td>
-          <a href="/">Upcomming Project</a>
+          <a href="https://www.ramanthakur.tech/Responsive-QR-code-image-using-box-model-and-positioning/">QR Code</a>
         </td>
         <td>
           <a href="/">Upcomming Project</a>
