--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="/images/image-qr-code.png" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/SUV.png" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
           <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
@@ -56,7 +56,7 @@
           <a href="https://www.ramanthakur.tech/Responsive-QR-code-image-using-box-model-and-positioning/">QR Code</a>
         </td>
         <td>
-          <a href="/">Upcomming Project</a>
+          <a href="https://67ddb053200b271a0b8f8286--chic-youtiao-393303.netlify.app/">CAR TYPES</a>
         </td>
         <td>
           <a href="/">Upcomming Project</a>
