--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="/images/image-qr-code.png" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
-          <img src="/images/SUV.png" alt="blank image" style="width: 100%; max-width: 200px;">          
+          <img src="/images/SUV-image.png" alt="blank image" style="width: 100%; max-width: 200px;">          
         </td>
         <td>
           <img src="/images/white.jpg" alt="blank image" style="width: 100%; max-width: 200px;">          
